# OECD-API

./: LICENSE  README.md  pyproject.toml
src/: oecd_api.py
